Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61984

Glyphs get corrupted when using Vietnamese, Czech and Russian characters (Avenir ttf)

XMLWordPrintable

    • e8161969828a67584fa3ab1cdb2bd79eb447c1da

      Glyphs get corrupted when using Vietnamese, Czech and Russian (+other languages) characters. The corruption happens at least when text with Avenir (ttf) font is displayed in a Qml application. FontLoader is used to load Avenir ttf.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            risto.sipola Risto Sipola
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes